* Terry horsecock worship scene (Huuuuge), written by LukaDoc and QuietBrowser.
* Added the first of hopefully many scenes from Patreon sponsored writer LonelyRonin:
 - Naga encounter
 - Naga loss (requires pussy)
* Added a bunch of more random encounters to Rigard, written by Del and sponsored by Patreon.
* Fixed a bug in Terry when you attempt the horsecock TF scene as a pure female player.
* Fixed a bug in Kiai's toy scenes. The text should be more readable now when it talks about the various toys.

--------------------------------------------
             PREVIOUS VERSIONS
--------------------------------------------

Version 0.3n
------------
* The usual typos and bugfixes.
* Lei can now give you some advice on how to handle Krawitz.
* Fixed a bug with lactation.
* Added scenes for bunnies (includes some Terry scenes by LD):
 - Win: Get fucked by males.
 - Win: Fuck males (dominant).
* Added partial repeat date scenes for Miranda (mostly talk atm). This is planned to be a much more extensive scene later, with more branching options and events.
* Naga mob (no content yet) + Naga transformative item.
* Added several TF items to Rosalin's menu:
 - Naga TF.
 - Dog TF.
 - Wolf TF.
 - Fox TF.
 - Scorpion TF.
* FranklyInappropriate offered a pull request to fix Fera's strapon stuff. Much appreciated!

Version 0.3m
------------
* The usual array of corrections to grammatical missteps and parser flailing.
* Misc opening times in Rigard shops fixed.
* Added a combat turn order listing, replacing the rather vague initiative listing.
* Changed the color of the sleep/wait/explore buttons to make it more clear when they are available.
* Changed color of level up button to green.
* Changed the approach gates sequence to make finding Lei more intuitive (thanks Del!). Lei's sequence has also been modified. Might result in some weirdness since I poked around at the flags.