@@ -18,6 +18,8 @@ Version 0.3o
  - Naga encounter
  - Naga loss (requires pussy)
 * Added a bunch of more random encounters to Rigard, written by Del and sponsored by Patreon.
+* Added the first of hopefully many scenes from Patreon sponsored writer Jo Rhade:
+ - Equines win, fuck mare (requires real cock)
 * Fixed a bug in Terry when you attempt the horsecock TF scene as a pure female player.
 * Fixed a bug in Kiai's toy scenes. The text should be more readable now when it talks about the various toys.
 
